tests/baselines/reference/parserFunctionDeclaration7.errors.txt
==== tests/cases/compiler/parserFunctionDeclaration7.ts (1 errors) ====
    module M {
       function foo();
       ~~~~~~~~
!!! parserFunctionDeclaration7.ts(2,4): error TS2238: Function implementation expected.
    }